Updating Thymeleaf application

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <h2>Reliable Project</h2>
 </head>
 <body>
-<B>Welcome</B>
+<B>Welcome to home.html of Thymeleaf</B>
 <br/>
 <a href="login">login</a>
 <a href="register">Register</a>
